--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 :root{
-    main-color: #0B61A4;
-    secondary-color: #FFBF00;
-    accent-color: #FF4900;
+    --main-color: #0B61A4;
+    --secondary-color: #FFBF00;
+    --accent-color: #FF4900;
 }       
+
+* {
+    padding: 0;
+    margin: 0;
+}
 
 .text {
     
@@ -38,24 +43,44 @@
     line-height: 100%;
 }
 
-.inter {
-    width: 50px;
-    height: 50px;
-    color:#FF4900;
-    background-color: #FF4900;
+.block {
+    width: 61488px;
+    height: 700px;
+    background-color: #D9EDFD;
+    color: #D9EDFD;
 }
+
+.blockdop {
+    width: max-content;
+    height: 10px;
+    background-color: #D9EDFD ;
+}
+
+.search {
+    width: 878px;
+    height: 57px;
+    background-color: #ffffff ;
+    color: #000000;
+    margin-left: 250px;
+    border: 1px solid #FF4900;
+    text-align: left;
+    border-radius: 50pt 50pt ;
+    margin-top: 10px ;
+    font-size: 35pt;
+    
+}
+
 header{
-    border: 1px;
-    solid: #ff0000;
+    border: 1px solid #FFBF00;
 }
+
 ul { 
     width: 100%;
     display: flex;
     flex-direction: row;
 }
 main{
-    border: 1px;
-    solid: green;
+    border: 1px solid green;
 }
 
 footer{
